fix: add z-index to product modal

--- a/src/components/ProductModal/ProductModal.module.scss
+++ b/src/components/ProductModal/ProductModal.module.scss
@@ -1,7 +1,8 @@
 .dialog {
 	width: 500px;
 	position: fixed;
-	background: #00000040;
+	background: #00000060;
+	backdrop-filter: blur(2px);
 	height: 100%;
 	width: 100%;
 	top: 0;
@@ -9,6 +10,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	z-index: 10;
 }
 
 .body {
